--- a/vignettes/library.bib
+++ b/vignettes/library.bib
@@ -71,3 +71,15 @@
     pages = {e47},
     doi = {10.1093/nar/gkv007},
   }
+
+  @book{harrell__regression_2015,
+	address = {Cham},
+	series = {Springer {Series} in {Statistics}},
+	title = {Regression {Modeling} {Strategies}},
+	isbn = {978-3-319-19424-0 978-3-319-19425-7},
+	url = {http://link.springer.com/10.1007/978-3-319-19425-7},
+	urldate = {2016-05-03},
+	publisher = {Springer International Publishing},
+	author = {Harrell ,, Frank E.},
+	year = {2015}
+}
